# rust-practice

amicable-number/: Cargo.toml
amicable-number/src/: main.rs
fibnacci/src/: main.rs
prime-number/src/: main.rs
rust-builder/src/: main.rs
student-management/: README.md
student-management/student-app/: Cargo.toml
student-management/student-app/src/: main.rs
student-management/student_library/: Cargo.toml
student-management/student_library/src/: lib.rs
thread-process/: Cargo.toml
thread-process/src/: main.rs
todo-cli/src/: main.rs
todo-file/: Cargo.toml  todo.txt
todo-file/src/: main.rs
todo-struct/: Cargo.toml
todo-struct/src/: main.rs
weather-app/weather-app/: Cargo.toml
weather-app/weather-app/src/: main.rs
weather-app/weather_library/: Cargo.toml
weather-app/weather_library/src/: lib.rs
web-scraper/web-scraper/: Cargo.toml
web-scraper/web-scraper/src/: main.rs
