[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["full"]}
json = "0.12.4"
weather_library = { path = "/Users/ganesholi/Developer/rust-practice/weather-app/weather_library" }